--- a/JournalApp2/Views/Windows/MainWindow.xaml
+++ b/JournalApp2/Views/Windows/MainWindow.xaml
@@ -4,6 +4,8 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:vm ="clr-namespace:JournalApp2.ViewModels"
+        xmlns:cmd ="clr-namespace:JournalApp2.Infrastructure.Commands"
+        xmlns:fa="http://schemas.fontawesome.io/icons/"
         xmlns:local="clr-namespace:JournalApp2.Views.Windows"
         mc:Ignorable="d"
         Title="{Binding Title}" 
@@ -16,6 +18,9 @@
         <Menu DockPanel.Dock="Top">
             <MenuItem Header="Файл">
                 <MenuItem Header="Выход"/>
+                  <MenuItem.Command>
+                    <cmd:CloseApplicationCommand/>
+                </MenuItem.Command>
             </MenuItem>
             <MenuItem Header="Помощь">
                 <MenuItem Header="О программе"/>
@@ -33,8 +38,17 @@
             </StatusBarItem>
         </StatusBar>
         <TabControl>
-            <TabItem Header="Вкладка 1">
-                <Grid>
+            <TabItem>
+                <TabItem.Header>
+                    <StackPanel Orientation="Horizontal"
+                                Height="5"
+                        <fa:ImageAwesome Icon="Search">
+                            
+                        </fa:ImageAwesome>
+                    </StackPanel>
+                </TabItem.Header>
+            </TabItem>
+            <Grid>
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="157*"/>
                         <ColumnDefinition Width="637*"/>
@@ -54,9 +68,17 @@
                              Grid.Row="0"
                              Fill="Red"
                              Stroke="Black"
-                             StrokeThickness="5"
-                             Height="100"
-                             Width="50"/>
+                             StrokeThickness="5">
+                        <Ellipse.InputBindings>
+                            <MouseBinding Command="{Binding CloseApplicationCommand}"
+                                          MouseAction="LeftDoubleClick"/>
+                        </Ellipse.InputBindings>
+                    </Ellipse>
+                
+                    <GridSplitter Grid.Column="0"
+                                  Grid.RowSpan="2"
+                                  HorizontalAlignment="Right"
+                                  Width="20"/>
                 </Grid>
             </TabItem>
             <TabItem Header="Вкладка 2">
